<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:id="@+id/location_switch"
        android:defaultValue="false"
        android:key="@string/key_location_switch"
        android:title="@string/pref_location_switch" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="100"
        android:inputType="number"
        android:title="@string/pref_search_delay_edit_text"
        android:key="@string/key_search_delay"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dependency="@string/key_location_switch" />

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="number"
        android:title="@string/pref_search_radius_edit_text"
        android:key="@string/key_search_radius"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dependency="@string/key_location_switch" />


</PreferenceScreen>
