<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home_name" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera_name" />
        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/data_name" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/map_name" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/credits_name" />
    </group>

</menu>
